--- a/signup.html
+++ b/signup.html
@@ -40,7 +40,7 @@
           </button>
           <hr />
           <button type="submit">Signup</button>
-          <a href="./login.html">Login</a>
+          <a href="./index.html">Login</a>
         </div>
       </form>
     </div>
